css: Fix width and alignment
On 3.30 cycle we've changed a few styles based on old mockups. Once that
was deployed and users started to see it, users started to complaint
about notes width being too small (#104) and notes justify alignment
making reading and writing notes harder (#102).

After discussing those issues with Design team, @aday and @bertob, we
decided to revert alignment to left and to increase width to around 700
pixels using default font and theme. @aday also asked to use ems instead
of pixels, so notes width will change according to font size.

--- a/data/Default.css
+++ b/data/Default.css
@@ -1,8 +1,7 @@
 body {
-  max-width:        500px;
+  max-width:        35.0em;
   margin:           0 auto;
   word-wrap:        break-word;
-  text-align:       justify;
   color:            black;
   background-size:  2.0em 2.0em;
   line-height:      1.5em;
